--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.html
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.html
@@ -55,13 +55,13 @@
                 </div> 
             </article>
             <div class="card__info">
-                <h3 class="card__title">Amsterdam</h3>
-                <span class="card__by">Desde <a href="#" class="card__author" title="author">40€</a></span>
+                <h3 class="card__title">Venecia</h3>
+                <span class="card__by">Desde <a href="#" class="card__author" title="author">300€</a></span>
                 <h3 class="card__category"> Precio por persona</h3>
             </div>
         </section>
         <section class="cards">
-            <article class="card card--1">
+            <article class="card card--2">
             <div class="pequeña">   
                 <div  class="card__img"></div>
                 <a href="#" class="card_link">
@@ -70,13 +70,13 @@
                 </div> 
             </article>
             <div class="card__info">
-            <h3 class="card__title">Amsterdam</h3>
-            <span class="card__by">Desde <a href="#" class="card__author" title="author">40€</a></span>
+            <h3 class="card__title">Paris</h3>
+            <span class="card__by">Desde <a href="#" class="card__author" title="author">170€</a></span>
             <h3 class="card__category"> Precio por persona</h3>
             </div>
         </section>
         <section class="cards3">
-            <article class="card card--1">
+            <article class="card card--3">
             <div class="pequeña">   
                 <div  class="card__img"></div>
                 <a href="#" class="card_link">
@@ -85,15 +85,15 @@
                 </div> 
             </article>
             <div class="card__info">
-            <h3 class="card__title">Amsterdam</h3>
-            <span class="card__by">Desde <a href="#" class="card__author" title="author">40€</a></span>
+            <h3 class="card__title">Estocolmo</h3>
+            <span class="card__by">Desde <a href="#" class="card__author" title="author">400€</a></span>
             <h3 class="card__category"> Precio por persona</h3>
             </div>
         </section>
         </div>
         <div class="fondo2">
             <section class="cards1">
-            <article class="card card--1">
+            <article class="card card--4">
                 <div class="pequeña">   
                 <div  class="card__img"></div>
                     <a href="#" class="card_link">
@@ -102,13 +102,13 @@
                 </div> 
             </article>
             <div class="card__info">
-                <h3 class="card__title">Amsterdam</h3>
-                <span class="card__by">Desde <a href="#" class="card__author" title="author">40€</a></span>
+                <h3 class="card__title">Amsterdan</h3>
+                <span class="card__by">Desde <a href="#" class="card__author" title="author">195€</a></span>
                 <h3 class="card__category"> Precio por persona</h3>
             </div>
         </section>
         <section class="cards">
-            <article class="card card--1">
+            <article class="card card--5">
             <div class="pequeña">   
                 <div  class="card__img"></div>
                 <a href="#" class="card_link">
@@ -117,13 +117,13 @@
                 </div> 
             </article>
             <div class="card__info">
-            <h3 class="card__title">Amsterdam</h3>
-            <span class="card__by">Desde <a href="#" class="card__author" title="author">40€</a></span>
+            <h3 class="card__title">Tokio</h3>
+            <span class="card__by">Desde <a href="#" class="card__author" title="author">500€</a></span>
             <h3 class="card__category"> Precio por persona</h3>
             </div>
         </section>
         <section class="cards3">
-            <article class="card card--1">
+            <article class="card card--6">
             <div class="pequeña">   
                 <div  class="card__img"></div>
                 <a href="#" class="card_link">
@@ -132,8 +132,8 @@
                 </div> 
             </article>
             <div class="card__info">
-            <h3 class="card__title">Amsterdam</h3>
-            <span class="card__by">Desde <a href="#" class="card__author" title="author">40€</a></span>
+            <h3 class="card__title">Londres</h3>
+            <span class="card__by">Desde <a href="#" class="card__author" title="author">280€</a></span>
             <h3 class="card__category"> Precio por persona</h3>
             </div>
         </section>
