--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.html
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="fondo">
-        <img class="Logo" src="\assets\images/LOGO_BLANCO.png" />
+        <img class="logo" src="\assets\images/LOGO_BLANCO.png" />
         <nav class="filters-wrapper">
         <form [formGroup]="miFormulario">    
             <ul class="filter-tabs prueba borde">
