< de app component

--- a/ProyectoAngular/src/app/app.component.html
+++ b/ProyectoAngular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="cuerpo">
     <app-header></app-header>
     <div *ngIf="mainSwitch">
-        <app-main></app-main>>
+        <app-main></app-main>
     </div>
 </div>
