--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.html
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.html
@@ -156,7 +156,7 @@
     </div>
 
     <div class="datosViaje" *ngIf="modalSwitch4">
-        <img style="float:right; width: 20px; height: 20px;" (click)="enviardatos()" src="\assets\images\eliminar.png" />
+        <img style="float:right; width: 20px; height: 20px;" (click)="volverInicio()" src="\assets\images\eliminar.png" />
         <div>
             <img class="imagenDatos" src="{{foto}}" />
             <h1 class="tituloViajeCompra">Empieza la reserva!</h1>
@@ -224,14 +224,13 @@
                 </div>
             </form>
 
-            <!-- Falta aplicar la función para que acceda a la pasarela de pago -->
             <button class="botonComprar" (click)="realizarPago()"> Realizar pago </button>
         </div>
 
     </div>
 
     <div class="datosViaje" *ngIf="modalSwitch5">
-        <img style="float:right; width: 20px; height: 20px;" (click)="enviardatos()" src="\assets\images\eliminar.png" />
+        <img style="float:right; width: 20px; height: 20px;" (click)="volverInicio()" src="\assets\images\eliminar.png" />
         <div>
             <img class="imagenDatos" src="{{foto}}" />
             <h1 class="tituloViajeCompra">Pasarela de pago</h1>
@@ -264,8 +263,7 @@
                 </div>
             </form>
 
-            <!-- Falta aplicar la función para que acceda a la pasarela de pago -->
-            <button class="botonComprar"> Finalizar </button>
+            <button class="botonComprar" (click)="volverInicio()"> Finalizar </button>
         </div>
 
     </div>
