--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.css
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.css
@@ -165,6 +165,7 @@
     border-radius: 12px;
     /*box-shadow: 1px 2px 2px 2px gray;*/
     box-shadow: 6px 9px 9px 7px rgba(0, 0, 0,0.1);
+    cursor: pointer;
 }
 
 .imageViaje {
