--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.html
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.html
@@ -1,6 +1,12 @@
+
 <!DOCTYPE html>
 <html class="fondo">
+    <div>
         <img class="logo" src="\assets\images/LOGO_BLANCO.png" (click)="volverInicio()"/>
+        <button class="botonlogin"> <img src="\assets\images/login_icono.png" height="50" weight="50"></button>
+    </div>
+        
+
         <nav class="filters-wrapper">
         <form [formGroup]="miFormulario">    
             <ul class="filter-tabs prueba borde">
@@ -324,5 +330,7 @@
             </div>
 
         </div>
-    </div>        
+    </div>       
+
+
 </html>
