--- a/ProyectoAngular/src/app/Componentes/login/login.component.html
+++ b/ProyectoAngular/src/app/Componentes/login/login.component.html
@@ -1,7 +1,10 @@
 <div class="login">
+  <br>
     <form class="custom-form" method="post">
       <button type = "button" class="cerrar" (click)="closeLogin()">X</button>
-      <h1>Iniciar sesión</h1>
+      <br>
+      <h2>Iniciar sesión</h2>
+      <br>
       <input
         type="email"
         name="email"
@@ -14,9 +17,12 @@
         placeholder="Contraseña"
         required="required"
       />
-      <p>¿Has olvidado tu contraseña?</p>
+      <p class="link">¿Has olvidado tu contraseña?</p>
+      <br>
       <button type="submit" class="entrar" (click)="login()">Entrar</button>
       <p>¿No tienes una cuenta?</p>
-      <p>Regístrate</p>
+      <p class="reg">Regístrate</p>
     </form>
+    <br>
   </div>
+  
