--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.css
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.css
@@ -435,6 +435,17 @@
     background-color: transparent;
     outline: none;
   }
+
+  .botonlogin {
+    width: 10 px;
+    height: 10 px;
+    border-radius: 50%;
+    background: transparent;
+    float: right;
+    margin: auto;
+    padding-right: 5%;
+    padding-top: 30px;
+  }
   .filters-wrapper {
     background: #b4cdfa;
     border-radius: 20px;
