--- a/ProyectoAngular/src/app/cuenta/cuenta.component.html
+++ b/ProyectoAngular/src/app/cuenta/cuenta.component.html
@@ -4,8 +4,13 @@
     </div>
 
     <p class="x">X</p>
+
+    <div style="background: rgb(240, 240, 240)">
+        <button class="micuenta" >Mi cuenta</button>
+        <button class="barra">Mis viajes</button>
+    </div>
     <div class="datosViaje">
-    <form name="formulPasajeros" method="post">
+    <form name="formulPasajeros" method="post" class="form">
         <h1> Datos personales</h1>
         <div>
             <label class="formPasajero" for="titulo">Sr / Sra / Srta</label>
