--- a/ProyectoAngular/src/app/app.component.html
+++ b/ProyectoAngular/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="cuerpo">
         <app-header></app-header>
         <div *ngIf="mainSwitch">
-            <app-cuenta></app-cuenta>>
+            <app-main></app-main>>
         </div>
     </div>
 </div>    
